--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -15,7 +15,7 @@ works:
   - it fails in almost every aspect
   - tons of BUGS
   - it's like the author was drunk or something 🙃 🔫
-  - I guess that's why they named it <CursedNEEES>
+  - I guess that's why they named it <BrokenNEEES>
   - you can try it anyway...
   - drag a rom into the TV or use one of my games
   - I sent you a bunch of these, they are in 📁  ~/roms~
@@ -41,7 +41,7 @@ awful:
   - it's designed in a <modular> way
   - so we can reuse its components ♻️
   - that'll allow us to implement things in whatever order we want!
-  - you could start, for example, implementing the graphics (🖥️  PPU) and I'll patch your emulator so it uses the 💻  CPU, 🔊  APU, and 🎮  Controller from <CursedNEEES>
+  - you could start, for example, implementing the graphics (🖥️  PPU) and I'll patch your emulator so it uses the 💻  CPU, 🔊  APU, and 🎮  Controller from <BrokenNEEES>
   - then you can continue fixing the other things at your pace
   - let's fix the 💾  Cartridge first
   responses:
