Finishing cpu end level

--- a/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
@@ -86,6 +86,6 @@ success:
   - omg
   - YOU DID IT! 🎉
   - awesome, your CPU now works correctly!
-  - you can advance and start drawing things on screen with the 👾  PPU
+  - you can advance and continue with the rest of the units
   responses:
   - lesgooo 🥳 [end]
