--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
