Adding Integrating the CPU level

--- a/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
+++ b/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
@@ -18,7 +18,7 @@ tryit:
   - aquí voy
   - " ... ... "
   run-after-messages: |
-    level.startEarthquake();
+    level.startEffect("earthquake");
     setTimeout(() => {
       bus.emit("patching-end");
     }, 3000);
@@ -27,7 +27,7 @@ tryit:
 
 done:
   run: |
-    level.stopEarthquake();
+    level.stopEffect();
     book.unlock("useCartridge");
   messages:
   - ✔️  ¡hecho!
