--- a/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
@@ -86,6 +86,6 @@ success:
   - omg
   - YOU DID IT! 🎉
   - awesome, your CPU now works correctly!
-  - you can advance and continue with the rest of the units
+  - we can advance and integrate it into the emulator
   responses:
   - lesgooo 🥳 [end]
