--- a/src/data/levels/05a_CPU/16_The golden log/chat/es.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/es.yml
@@ -86,6 +86,6 @@ success:
   - omg
   - ¡LO HICISTE! 🎉
   - buenísimo, ¡tu CPU ahora funciona correctamente!
-  - puedes avanzar y continuar con el resto de las unidades
+  - podemos avanzar e integrarla con el emulador
   responses:
   - vamooo 🥳 [end]
