Integrating GameStreamer with level

--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
@@ -18,7 +18,7 @@ doit:
   - WOOOW
   - omg
   - this is so difficult
-  - let me check...
+  - let's check...
   - oh crap
   - I messed everything up 😅
   - hmm...
