--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
@@ -18,7 +18,7 @@ doit:
   - WOOOW
   - omg
   - esto es tan difícil
-  - déjame revisar...
+  - a ver...
   - oh rayos
   - arruiné todo 😅
   - hmm...
