--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
@@ -40,6 +40,7 @@ zoom:
 
 play:
   run: |
+    {{Right}}.stream.setIntegration("Spacegulls");
     {{Right}}.load("Spacegulls.neees", "stream", "bin");
   messages:
   - yeah
