--- a/src/data/levels/05a_CPU/16_The golden log/chat/es.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/es.yml
@@ -13,7 +13,7 @@ main:
   - ejecutaré tu emulador y registraré cada instrucción
   - comparando cada línea con un "golden log"
   run-after-messages: |
-    store.dispatch.savedata.openFile("/roms/test/golden.log");
+    store.dispatch.savedata.openFile("/roms/_test/golden.log");
   responses:
   - ¿qué es un golden log? 🏆 [golden]
 
