--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
@@ -52,6 +52,13 @@ play:
   - spacegulls-end [finish]
 
 finish:
+  run: |
+    const directory = `${Drive.ROMS_DIR}/non-platform`
+    try { filesystem.mkdir(directory); } catch (e) {}
+
+    ["Bobl.neees", "Spacegulls.neees", "Wolfling.neees"].forEach((file) => {
+      filesystem.write(`${directory}/${file}`, level.bin[file]);
+    });
   messages:
   - AWESOME!
   - now you are a ~hero~
