FIX: Only saving state when a key is found && saving new ROMs as binary

--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
@@ -57,7 +57,7 @@ finish:
     try { filesystem.mkdir(directory); } catch (e) {}
 
     ["Bobl.neees", "Spacegulls.neees", "Wolfling.neees"].forEach((file) => {
-      filesystem.write(`${directory}/${file}`, level.bin[file]);
+      filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
     });
   messages:
   - AWESOME!
