--- a/src/data/levels/02_Assembly/04_Flags/chat/es.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/es.yml
@@ -85,7 +85,7 @@ carry:
   messages:
   - ahora puedes ver en el depurador que la Bandera Carry está en 1
   responses:
-  - (*) wow, ¿alguna otra bandera útil? [exercise]
+  - (*) guau, ¿alguna otra bandera útil? [exercise]
   - (*) momento, ¿todo este tiempo podrías haber estado escribiendo números en decimal? 😤 [decimal]
 
 decimal:
