--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
@@ -40,6 +40,6 @@ done:
   - ✔️  done!
   - now, the 💻  icon in the emulator will glow ✨
   - try running some games! you'll notice a big improvement
-  - the timing should be more consistent, and you won't face any bug that affects game logic
+  - the timing should be more consistent, and you won't face any bugs that affect game logic
   responses:
   - ▶️  continue [end]
