Finishing RavensGate integration

--- a/src/data/levels/✨_Let's play/02_Platform games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/02_Platform games/chat/en.yml
@@ -6,7 +6,7 @@ main:
   - hey,
   - let's play a game
   - it's called 🧸 📍  ~Nalleland~
-  - if you win my challenge, I'll send you all my 🐸  <platform> games
+  - if you win my challenge, I'll send you all my 🍄  <platform> games
   - in the ~*.neees~ format
   responses:
   - what challenge? 👀 [challenge]
