--- a/src/data/levels/✨_Let's play/02_Platform games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/02_Platform games/chat/es.yml
@@ -6,7 +6,7 @@ main:
   - hey,
   - juguemos un juego
   - se llama 🧸 📍  ~Nalleland~
-  - si ganas mi desafío, te enviaré todos mis 🐸  juegos de <plataformas>
+  - si ganas mi desafío, te enviaré todos mis 🍄  juegos de <plataformas>
   - en el formato ~*.neees~
   responses:
   - ¿qué desafío? 👀 [challenge]
