Finishing SuperTiltBro integration and adding spanish copy

--- a/src/data/levels/✨_Let's play/05_Battle games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/05_Battle games/chat/en.yml
@@ -4,8 +4,8 @@ main:
     set((m) => m.chat.winOnEnd = true);
   messages:
   - hey,
-  - let's play a game
-  - it's called 🦸 🤸  ~Super Tilt Bro~
+  - juguemos un juego
+  - se llama 🦸 🤸  ~Super Tilt Bro~
   - if you win my challenge, I'll send you all my 💥  <battle> games
   - in the ~*.neees~ format
   responses:
