--- a/src/data/levels/✨_Let's play/05_Battle games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/05_Battle games/chat/es.yml
@@ -32,7 +32,7 @@ play:
 
 finish:
   run: |
-    const directory = `${Drive.ROMS_DIR}/adventure`
+    const directory = `${Drive.ROMS_DIR}/battle`
     try { filesystem.mkdir(directory); } catch (e) {}
 
     ["SuperTiltBro.neees", "TestlaVsEdison.neees"].forEach((file) => {
