--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -13,13 +13,13 @@ main:
 works:
   messages:
   - it fails in almost every aspect
-  - tons of BUGS
+  - tons of <bugs>
   - it's like the author was drunk or something 🙃 🔫
   - I guess that's why they named it <BrokenNEEES>
   - you can try it anyway...
-  - drag a rom into the TV or use one of my games
-  - I sent you a bunch of these, they are in 📁  ~/roms~
-  - you can launch them with the `open` command
+  - 💡  drag a ROM into the TV or use one of the games in 📁  ~/roms~
+  - (if you don't have any, go and play the <👾 > chapter!)
+  - you can launch ROMs with the `open` command
   responses:
   - (*) what bugs did you find? 🐞 [bugs]
   - this is awful 👎 [awful]
