--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -74,12 +74,12 @@ implement:
   - revisa 📄  ~/lib/interrupts.js~
   - |-
     📚  agrega este método a tu `CPU`:
-    **interrupt(interrupt, conBFlag = false)**:
+    **interrupt(interrupt, withBFlag = false)**:
       __-> si interrupt.id === "IRQ" y I=1, retorna 0
         (la interrupción es ignorada)
       -> pone [PC] en la pila
       -> pone las banderas en la pila
-        (si <conBFlag> es true, el byte de banderas tendría que tener el bit 4 encendido)
+        (si <withBFlag> es true, el byte de banderas tendría que tener el bit 4 encendido)
       -> incrementa 7 ciclos (this.cycles += 7)
       -> asigna I=1 en el registro de banderas
       -> asigna [PC] = al resultado de leer las direcciones (interrupt.vector) y (interrupt.vector + 1) en Little Endian
