--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -78,8 +78,9 @@ implement:
       __-> si interrupt.id === "IRQ" y I=1, retorna 0
         (la interrupción es ignorada)
       -> pone [PC] en la pila
-      -> pone las banderas en la pila
-        (si <withBFlag> es true, el byte de banderas tendría que tener el bit 4 encendido)
+      -> pone el byte de banderas en la pila
+        (si <withBFlag> es true, el valor se agrega a la pila con el bit 4 encendido)
+        (de lo contrario, se agrega tal cual está)
       -> incrementa 7 ciclos (this.cycles += 7)
       -> asigna I=1 en el registro de banderas
       -> asigna [PC] = al resultado de leer las direcciones (interrupt.vector) y (interrupt.vector + 1) en Little Endian
