FIX: this.cycle*

--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
@@ -81,7 +81,7 @@ implement:
       -> pushes the flags byte onto the stack
         (if <withBFlag> is true, the value is pushed with its bit 4 on)
         (otherwise, the value is pushed as is)
-      -> increments 7 cycles (this.cycles += 7)
+      -> increments 7 cycles (this.cycle += 7)
       -> sets I=1 in the flags register
       -> sets [PC] = the result of reading the addresses (interrupt.vector) and (interrupt.vector + 1) in Little Endian
         (remember that you have a *read16* method for that)
